--- a/public/admin/html/mastamy/ForgotPassword.html
+++ b/public/admin/html/mastamy/ForgotPassword.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+    <html></html>
     <div class="main-wrapper">
         <!-- ============================================================== -->
         <!-- Preloader - style you can find in spinners.css -->
